--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,5 +5,5 @@
   </div>
   
   <ion-text color="tertiary" class="smooth">with the craziest messaging app</ion-text><br><br>
-  <ion-button color="tertiary" class="main-call" routerLink="login" shape="round">Sign In <ion-icon name="star" slot="end"></ion-icon></ion-button>
+  <ion-button color="tertiary" class="main-call" routerLink="/login" shape="round">Sign In <ion-icon name="star" slot="end"></ion-icon></ion-button>
 </ion-content>
