--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,6 +10,9 @@
     .welcome-statement, ion-text.smooth{
         margin-top: 25vh !important;
     }
+    h1{
+      margin-top:10vh;
+    }
     .welcome-statement, h1{
       color: var(--ion-color-light);
       font-weight: bold;
