--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,17 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title color="light">Login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content padding>
+  <h1 class="login-title"><i class="smartchat-logo"></i> Login</h1><br>
   <form (submit)="signIn(this)">
     <ion-item>
-      <ion-input type="text" placeholder="Your username" color="light" [(ngModel)]="username" name="email"></ion-input>
+      <ion-input type="text" placeholder="Your username" color="light" [(ngModel)]="username" name="username"></ion-input>
     </ion-item>
     <ion-item>
       <ion-input type="password" placeholder="Your password" color="light" [(ngModel)]="password" name="password"></ion-input>
     </ion-item>
     <ion-button type="submit" name="tertiary" icon="star" expand="block">Login</ion-button>
   </form>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button>
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-list side="top">
+          <ion-fab-button (click)="goHome()">
+            <ion-icon name="home"></ion-icon>
+          </ion-fab-button>
+      </ion-fab-list>
+    </ion-fab>
 </ion-content>
