--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,3 +2,15 @@
   max-height: 35vh;
   overflow: hidden;
 }
+ion-content{
+  .text-bold{
+    font-weight: 550;
+    font-family: inherit;
+  }
+  .text-muted{
+    font-weight: normal;
+    font-style: unset;
+    font-family: unset;
+    color:gray;
+  }
+}
