--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,23 @@
 <ion-tabs>
 
   <ion-tab-bar slot="top">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
+    <ion-tab-button tab="tab1" color="light">
+      <ion-icon name="chatbubbles"></ion-icon>
       <ion-label>Chats</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
+    <ion-tab-button tab="tab2" color="light">
+      <ion-icon name="contacts"></ion-icon>
       <ion-label>Friends</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Settings</ion-label>
+    <ion-tab-button tab="tab3" color="light">
+      <ion-item>
+        <ion-avatar slot="end">
+          <img src="http://localhost/smartchat_api/img/{{this.AuthUser.avatar}}">
+        </ion-avatar>
+      </ion-item>
+      
     </ion-tab-button>
   </ion-tab-bar>
 
