--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -68,12 +68,13 @@
   --ion-color-medium-tint: #a2a4ab;
 
   /** light **/
-  --ion-color-light: #f4f5f8;
+  --ion-color-light: #f0ebeb;
   --ion-color-light-rgb: 244, 244, 244;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
   // for the background
-  --ion-background-color: #383a3e;
+  --ion-background-color: url("../assets/mobile_back.png");
+  //  #383a3e;
 }
